MAJ des annexes

--- a/Genma_Tor et le Tor Browser Annexes.tex
+++ b/Genma_Tor et le Tor Browser Annexes.tex
@@ -56,6 +56,7 @@
 \justifying{
 \item Polémiques
 \item Quelques chiffres
+\item Installer des extensions dans le navigateur Tor
 \item Les types de noeuds
 \item Vérification des signatures
 \item La commande Torify
@@ -100,6 +101,26 @@ Les sites Web des services cachés ne représentent que 2\% du trafic total dixi
 \end{itemize}
 \end{frame}
 
+%----------------------------------------------------------------------------------------
+\begin{frame}
+\frametitle{Installer des extensions dans le navigateur Tor?}
+
+\justifying{
+L'installation des add-ons dans le navigateur Tor peut ajouter des failles de sécurité potentielles :
+}
+\begin{itemize}
+\justifying{
+\item Certaines extensions pourraient ne pas prendre en compte la configuration (tout faire passer par Tor) et laisser fuiter des informations privées.
+\item Certaines extensions pourraient  révéler des informations sur vos habitudes de navigation, l'historique de navigation, ou des informations du système, que ce soit à dessein ou par erreur.
+\item Les extensions peuvent avoir des bogues et des failles de sécurité qui peuvent être exploitées à distance par un attaquant.
+\item  Les extensions peuvent avoir des bogues casser la sécurité offerte par d'autres add-ons, par exemple Torbutton, et de casser votre anonymat.
+\item Elles changent votre navigateur en le démarquant, rendant unique.
+}
+\end{itemize}
+\justifying{
+Sauf preuve du contraire, aucun add-on, en dehors de ceux déjà inclus dans le TorBrowser (qui ont été sérieusement vérifiés et peuvent être considérées comme sûr) ne sont à ajouter.
+}
+\end{frame}
 
 %----------------------------------------------------------------------------------------
 \begin{frame}
