--- a/Genma_Tor et le Tor Browser Annexes.tex
+++ b/Genma_Tor et le Tor Browser Annexes.tex
@@ -240,6 +240,10 @@ Le projet coûte 2 M\$ annuellement pour son développement et pour payer les no
 }
 \end{itemize}
 Source \url{https://fr.wikipedia.org/wiki/Tor_(réseau)}
+\\
+\justifying{
+Ce que financent plusieurs branches différentes du gouvernement des USA est le développement des logiciels à travers l'organisation The Tor Project. Le réseau Tor est quant à lui mis en place par des bénévoles et des organisations comme Nos oignons. 
+}
 \end{frame}
 
 %----------------------------------------------------------------------------------------
