Ajout de TorFlow

--- a/Genma_Tor et le Tor Browser Annexes.tex
+++ b/Genma_Tor et le Tor Browser Annexes.tex
@@ -21,7 +21,7 @@
 \usepackage[utf8]{inputenc}  
 \usepackage[T1]{fontenc}  
 \usepackage{geometry}     
-\usepackage[francais]{babel} 
+%\usepackage[francais]{babel} 
 \usepackage{eurosym}
 \usepackage{verbatim}
 \usepackage{ragged2e}
@@ -99,6 +99,17 @@ Les sites Web des services cachés ne représentent que 2\% du trafic total dixi
 \item 500k utilisateurs (6\% de français).
 }
 \end{itemize}
+\end{frame}
+
+%----------------------------------------------------------------------------------------
+\begin{frame}
+\frametitle{TorFlow \url{https://torflow.uncharted.software/}}
+
+
+\begin{center}
+\includegraphics[scale=0.45]{./images/torflow.png}
+\end{center}
+
 \end{frame}
 
 %----------------------------------------------------------------------------------------
