--- a/Genma_Tor et le Tor Browser Annexes.tex
+++ b/Genma_Tor et le Tor Browser Annexes.tex
@@ -65,6 +65,8 @@
 \item Précisions sur le DNS
 \item Les échanges de clefs
 \item Le financement
+\item TorFlow
+\item DHT des Hidden Service Directories
 \item Série de liens
 }
 \end{itemize}
@@ -254,6 +256,17 @@ Source \url{https://fr.wikipedia.org/wiki/Tor_(réseau)}
 \\
 \justifying{
 Ce que financent plusieurs branches différentes du gouvernement des USA est le développement des logiciels à travers l'organisation The Tor Project. Le réseau Tor est quant à lui mis en place par des bénévoles et des organisations comme Nos oignons. 
+}
+\end{frame}
+
+%----------------------------------------------------------------------------------------
+\begin{frame}
+\frametitle{Nom de domain .onion }
+\justifying{
+\begin{block}{Les nom de domain .onion sont-ils publiés quelque part ?}
+Réponse d'Aeris : "les DHT des Hidden Service Directories de Tor. Mais comme c’est une *Distributed*HT, personne n’a la liste complète.
+ En tout cas pas facilement et pas sans risquer de se faire blacklister violamment par le @torproject en tant que BadNode"
+\end{block}
 }
 \end{frame}
 
